--- a/home/techguides/environment-creation-in-paas.html
+++ b/home/techguides/environment-creation-in-paas.html
@@ -86,40 +86,31 @@
 <li><strong>Organisation ID</strong></li>
 </ul>
 <p>The Temenos Development Platform support multitenancy and Organisations are designed to be distinctive accounts.  </p>
-<p>Upon subscription you&#39;ll receive a <strong>unique</strong> Organisation Id as a URL link. Your Organisation Id will look similar to this: </p>
-<p><img src="images/organisation-url.png" alt=""></p>
+<p>Upon subscription you&#39;ll receive a <strong>unique</strong> Organisation Id as a URL link such as: </p>
+<p><code>http://portal.staging.temenos.cloud:4200/organisations/1cg74hgepdevio/login</code></p>
 <p>The confirmation of your Organisation activation will contain the link and access instructions to your designated Organisation administrator. The administrator is the first and only user.</p>
+<p><img src="../images/login-screen.png" alt=""></p>
 <p><br></p>
 <ul>
 <li><strong>Environments</strong></li>
 </ul>
-<p>The Development platform (Extend) has the capability to provision environments in a variety of different configurations. Users can initiate a new environment and select from a predefined list of templates the application, the release and stack they wish to provision. Each month we host a new template with the latest release of Temenos suite. </p>
-<p>The environments are customisable in terms of Name and brief description to explain their purpose. The templates follow the official Temenos configuration stack but they can be customised for Releases 2016 onwards.   </p>
+<p>The Development platform has the capability to provision environments in a variety of different configurations. Users can initiate a new environment and select from a predefined list of templates the application, the release and stack they wish to provision. Each month we host a new template with the latest release of Temenos suite. </p>
+<p>The environments are customisable in terms of Name and brief description to explain their purpose. The templates follow the official Temenos configuration stack but it can be customised for Releases 2016 onwards.   </p>
 <p>Create your own environment:</p>
-<ul>
-<li>Either click the Environments tab on the left menu and then click <strong>New Environment</strong> button on the top right corner.  </li>
-<li>Or you can already see the environment page open with the fields available to create a new environment.</li>
-</ul>
-<p><img src="images/env-tab.png" alt=""></p>
+<p><img src="../images/new-environment.png" alt=""></p>
 <p><br></p>
 <ul>
 <li>Fill Name and Description fields</li>
 <li>Select one of the available templates from dropdown list, based on your requirements</li>
-<li>Click <strong>Create environment</strong>
-All fields are mandatory except &#39;Labels&#39;.</li>
+<li>Click <strong>Create environment</strong></li>
 </ul>
-<p><img src="images/env-new.png" alt=""></p>
+<p><img src="../images/new-environment-create.png" alt=""></p>
 <p><br></p>
-<div class="NOTE"><h5>Note</h5><p>The environment creation may take around 20 minutes or more, depending on the selected template.</p>
-</div>
 <ul>
 <li><strong>Templates</strong></li>
 </ul>
-<p>Check the list with all available templates. Click the <strong>Templates Catalog</strong> on the left menu.</p>
-<p><img src="images/env-template.png" alt=""></p>
-<p>Currently, the screen that opens will display an FCM and T24 default template. Click on the Template Type and select for one of the applications, for example T24 to see the latest retail Suites versions and other available templates.</p>
-<p><img src="images/env-template-type.png" alt=""></p>
-<p><img src="images/env-template-list.png" alt=""></p>
+<p>Check the list with all available templates. These are latest Retail Suites versions:</p>
+<p><img src="../images/templates.png" alt=""></p>
 <p><br></p>
               <hr>
               
