--- a/home/techguides/user-creation-in-paas-test.html
+++ b/home/techguides/user-creation-in-paas-test.html
@@ -98,7 +98,7 @@
 <p>•   Open PuTTYgen and click Generate button:</p>
 <p><img src="images/putty-keygen.png" alt="putty keygen"></p>
 <p>•   This creates a new ssh key by moving the mouse in the blank area(highlighted in red), as per bellow picture.</p>
-<p><img src="images/putty-keygen-random.png" alt="generate ssh key"></p>
+<p><img src="./images/putty-keygen-random.png" alt="generate ssh key"></p>
 <p>•   After Puttygen finished key generation, you can save your public key/private key in any location from your local machine.</p>
 <div class="NOTE"><h5>Note</h5><p>In order to have a valid ssh key that can be recognized by 
  Infrastructure, do not use the Save public key button from Puttygen and just select the whole public key from the PuTTYgen screen and save it in your local machine.</p>
@@ -112,9 +112,9 @@
 <p>•   Login to your organisation portal using the link and the credentials provided.</p>
 <p><img src="images/portal-login.png" alt="portal login"></p>
 <p>•   Click User menu and then New user button, as below:</p>
-<p><img src="images/new-user.png" alt="new user"></p>
+<p><img src="./images/new-user.png" alt="new user"></p>
 <p>This will create a new user in your organisation. This new user will be automatically assigned to all GitLab Repositories from within all environments. If you have already a user created, you can click on the user and update the SSH key box with the one created above.</p>
-<p><img src="images/new-user-created.png" alt="new user created"></p>
+<p><img src="./images/new-user-created.png" alt="new user created"></p>
 <p>•   Public SSH key needs to be pasted in SSH Key text box. Open Windows Explorer and locate your public key generated using PuTTY Key Generator. </p>
 <p><img src="images/putty-keygen-publicselect.png" alt="paste key text"></p>
 <p>• Right click and open it with notepad. Select all and copy to clipboard.</p>
