--- a/home/toc.html
+++ b/home/toc.html
@@ -93,7 +93,7 @@
             </li>
             <li>
               <span class="expand-stub"></span>
-              <a href="techguides/index.html" name="" title="How to...">How to...</a>
+              <a href="./techguides/index.md" name="" title="How to...">How to...</a>
                 
                 <ul class="nav level2">
                   <li>
@@ -103,7 +103,7 @@
                     <a href="techguides/environment-creation-in-paas.html" name="" title="Create environments and organisations">Create environments and organisations</a>
                   </li>
                   <li>
-                    <a href="techguides/environment-basic-operations.html" name="" title="Perform Environment Basic Operations">Perform Environment Basic Operations</a>
+                    <a href="./techguides/environment-basic-operations.md" name="" title="Perform Environment Basic Operations">Perform Environment Basic Operations</a>
                   </li>
                   <li>
                     <a href="techguides/use-gitlab-repository.html" name="" title="Deploy features to environment">Deploy features to environment</a>
@@ -127,17 +127,17 @@
                     <a href="techguides/clone-environment.html" name="" title="Clone an Environment">Clone an Environment</a>
                   </li>
                   <li>
-                    <a href="techguides/export-import-database.html" name="" title="Export and Import a Database">Export and Import a Database</a>
+                    <a href="./techguides/export-import-database.md" name="" title="Export and Import a Database">Export and Import a Database</a>
                   </li>
                   <li>
-                    <a href="techguides/access-ud-directories.html" name="" title="Access UD Directories">Access UD Directories</a>
+                    <a href="./techguides/access-ud-directories.md" name="" title="Access UD Directories">Access UD Directories</a>
                   </li>
                   <li>
                     <a href="techguides/fcm-configuration.html" name="" title="Configure and Use FCM Application">Configure and Use FCM Application</a>
                   </li>
                 </ul>  </li>
             <li>
-              <a href="techguides/troubleshooting.html" name="" title="Troubleshooting">Troubleshooting</a>
+              <a href="./techguides/troubleshooting.md" name="" title="Troubleshooting">Troubleshooting</a>
             </li>
             <li>
               <a href="support.html" name="" title="Getting Support">Getting Support</a>
