--- a/home/techguides/add-app-endpoint.html
+++ b/home/techguides/add-app-endpoint.html
@@ -82,7 +82,7 @@
 <h1 id="create-new-application-endpoint">Create new application endpoint</h1>
 
 <p>This document can be used by technical staff who need to add new endpoints to the T24 application of a Environment in case of adding any custom endpoints or deploying a plugin in the application server of the Environment.</p>
-<div class="NOTE"><h5>Note</h5><p>This guide presumes that an Environment is already created and available. <em>(In this example, we have created a Environment named DevEnv).</em></p>
+<div class="NOTE"><h5>Note</h5><p>This guide presumes that an Environment is already created and available. <em>(In this example, we have created a Environment named DEMO).</em></p>
 </div>
 <p><strong>Three</strong> properties are mandatory to create a new endpoint:</p>
 <table>
@@ -107,18 +107,15 @@
 </tr>
 </tbody>
 </table>
-<div class="NOTE"><h5>Note</h5><p><strong>The URL must be of type: &quot;https://........&quot;</strong>.
-As a reference, if you want to insert an endpoint which links to your environment browser web, please check the related URL - for example: <a href="https://t24-xxxxxxxxxxxx.temenos.cloud/BrowserWeb/">https://t24-xxxxxxxxxxxx.temenos.cloud/BrowserWeb/</a>)</p>
-</div>
 <p>In order to create new endpoints for the T24 application of your Environment, the next steps must be followed:</p>
 <ul>
 <li><p>Clone the GitLab repository of your Environment in your local machine. For more details on how to clone a repository, check this <a href="use-gitlab-repository.html" target="_blank"><strong>page</strong></a>.</p>
 </li>
 <li><p>Create a file with <strong>.endpoint</strong> extension inside <strong>plugins</strong> folder of the cloned repository as in the bellow picture. The name of the file is not important, but it should be relevant for your requirement.
-<img src="images/endpoint-create.png" alt="create endpoint file"></p>
+<img src="./images/app_endp1.png" alt="create endpoint file"></p>
 </li>
 <li><p>Inside the <strong>.endpoint</strong> file, add a new line for each endpoint with the structure <strong>Your_Endpoint_Description~Your_Endpoint_URL~Your_Endpoint_Type</strong>, as per bellow picture:</p>
-<p><img src="images/app-endpoint-edit.png" alt="edit endpoint file"></p>
+<p><img src="./images/app-endpoint-edit.png" alt="edit endpoint file"></p>
 <div class="NOTE"><h5>Note</h5><p>&quot;<strong>~</strong>&quot; character is used as a separator between Endpoint Description, URL and Type and it must always be present in each endpoint line.
 Endpoint Description and URL are as per your choice. Type must be one of the options: <strong>clickable</strong>, <strong>copyable</strong> or <strong>downloadable</strong>.</p>
 </div>
@@ -127,34 +124,30 @@ Endpoint Description and URL are as per your choice. Type must be one of the opt
 </li>
 <li>Go to your environment to the portal and click the <strong>deploy</strong> button under the Repository.   </li>
 <li>Wait until the <strong>.endpoint</strong> file is deployed in your Environment and check the Endpoints section of the T24 application as below:</li>
-<li><img src="images/endpoint-added.png" alt="portal endpoint display"></li>
+<li><img src="images/app-endpoint-clickable.png" alt="portal endpoint display"></li>
 </ul>
 <h1 id="add-multiple-endpoints-from-a-single-file">Add multiple endpoints from a single file</h1>
 <ul>
-<li><p>If a plugin has more than one endpoint, create a .endpoint file and add a separate line for each endpoint item, as below:
-<br></p>
-<p><img src="images/endpoint-test.png" alt="multiple endpoints same file">
-<br></p>
-</li>
+<li></li>
+<li>If a plugin has more than one endpoint, create a .endpoint file and add a separate line for each endpoint item, as below:
+<img src="images/app-endpoint-single.png" alt="multiple endpoints same file">
+<br></li>
 <li>After the file is deployed, all 3 endpoints from the example are displayed in the Endpoints section of the T24 application.</li>
-<li><p>Also note that the endpoints are displayed/ grouped by their type: clickable, copyable and downloadable.</p>
-<p><img src="images/endpoint-grouped.png" alt="multiple endpoints multiples files display"></p>
-</li>
+<li>Also note that the endpoints are displayed/ grouped by their type: clickable, copyable and downloadable.
+<img src="images/app-endpoints-deployed-type.png" alt="multiple endpoints same file"></li>
 </ul>
 <h1 id="add-multiple-endpoints-from-multiple-files-at-the-same-time">Add multiple endpoints from multiple files at the same time</h1>
 <ul>
-<li><p>If you want to add endpoints for multiple plugins deployed in your Environment, you can add the endpoints of all plugins in a single file or you can also create a separate .endpoint file for each plugin for a better delimitation.
-<img src="images/app-endpoint-files.png" alt="multiple endpoints multiple files"></p>
-</li>
-<li><p>After both files are deployed, the three endpoints for plugin1 and the two endpoints for plugin2 are displayed in the Endpoints section of the T24 application.</p>
-<p><img src="images/endpoint-click.png" alt="multiple endpoints multiple files"></p>
-</li>
+<li>If you want to add endpoints for multiple plugins deployed in your Environment, you can add the endpoints of all plugins in a single file or you can also create a separate .endpoint file for each plugin for a better delimitation.
+<img src="images/app-endpoint-files.png" alt="multiple endpoints multiple files"></li>
+<li>After both files are deployed, the three endpoints for plugin1 and the two endpoints for plugin2 are displayed in the Endpoints section of the T24 application.
+<img src="images/app-endpoints-multiple.png" alt="multiple endpoints multiples files display"></li>
 </ul>
 <h1 id="updateremove-endpoints">Update/Remove endpoints</h1>
 <ul>
 <li>If you want to update endpoints that were already added to an application, you just have to update the required endpoint line from the .endpoint file, commit the file to the GitLab repository of your Environment and after the file is deployed, the required endpoint will be updated in the Endpoints section of your Application.</li>
 <li>If you want to remove endpoints that were already added to an application, you just have to remove the required endpoint line from the .endpoint file, commit the file to the GitLab repository of your Environment and after the file is deployed, only the endpoints available in the .endpoint file will be displayed in the Endpoints section of your Application.</li>
-<li><p>Also, to remove all the endpoints from a .endpoint file <strong>do not remove/ delete the file</strong>, but remove all the endpoints lines inside the file (empty the file).</p>
+<li><p>Also, to remove all the endpoints from a .endpoint file do not remove/ delete the file, but remove all the endpoints lines inside the file (empty the file).</p>
 <div class="NOTE"><h5>Note</h5><p>To summarize, the list of plugin endpoints displayed in the Endpoints section for an application is updated based on the content of <strong>.endpoint</strong> files available in the <strong>plugins</strong> folder from the GitLab repository of your Environment. If no .endpoint files are available in the GitLab repository of your Environment, then no plugin endpoints will be displayed.</p>
 </div>
 </li>
