--- a/home/techguides/jenkins-build-promote-pipelines.html
+++ b/home/techguides/jenkins-build-promote-pipelines.html
@@ -91,37 +91,36 @@
 <p><img src="images/jenkins-build-promote-pipelines-flow.png" alt=""></p>
 <p>To implement the Pipeline as a code we will use Jenkins Pipeline in order to automate tasks associated with building, testing and deploying software.</p>
 <h2 id="access-development-portal">Access Development Portal</h2>
-<p>Sign into one of the following URLs (choose the link you have been provided with): <a href="https://portal.temenos.cloud/">portal.temenos.cloud</a> or <a href="https://tcd-portal.temenos.cloud/">https://tcd-portal.temenos.cloud/</a> using the credentials provided by Temenos (Username and Password):</p>
-<p><img src="images/db-login.png" alt=""></p>
+<p>Sign into following URL: <code>portal.temenos.cloud</code> using the credentials provided by Temenos (Username and Password):</p>
+<p><img src="images/jenkins-build-portal-login.png" alt=""></p>
 <p><br></p>
 <h2 id="create-a-new-environment">Create a new environment</h2>
-<ul>
-<li>Fill the required fileds and press <strong>Create</strong></li>
-</ul>
-<p><img src="images/env-new.png" alt=""></p>
+<p>Press <strong>&#39;New environment&#39;</strong></p>
+<p><img src="images/jenkins-build-new-environment.png" alt=""></p>
 <div class="NOTE"><h5>Note</h5><p>You will need to create following three environments:</p>
 <p>• A build environment with template &quot;Build resources&quot;</p>
-<p>• A source environment with the required template (<em>in our example is &quot;Retail Suite R18.11&quot;</em>)</p>
+<p>• A source environment with the required template (<em>in our example is &quot;Retail Suite R17.12(H2)&quot;</em>)</p>
 <p>• A target environment with the same template as the last one</p>
 </div>
 <p><strong>Build resources</strong> environment:</p>
-<p>Click New Environment button and fill the mandatory fields as in below picture:</p>
-<p><img src="images/jenkins-build-resources.png" alt=""></p>
+<p>Fill the mandatory fields as in below picture:</p>
+<p><img src="./images/jenkins-build-new-environment-resources.png" alt=""></p>
 <p>Fill the following parameters and press <strong>&#39;Create environment&#39;</strong>:</p>
 <p>•   Name</p>
 <p>•   Description</p>
 <p>•   Template</p>
 <p>•   <em>Labels (optional)</em></p>
-<p><img src="images/jenkins-build-integrated.png" alt=""></p>
-<div class="NOTE"><h5>Note</h5><p>It might take about 15-20
- minutes to create the enviroment.</p>
+<p><img src="images/jenkins-build-environment-fields.png" alt=""></p>
+<div class="NOTE"><h5>Note</h5><p>It might take about 15 minutes to create the enviroment.</p>
 </div>
+<p>The environment named &#39;Integrated Dev Environment&#39; has been created:</p>
+<p><img src="images/jenkins-build-created-environment.png" alt=""></p>
 <h2 id="login-to-jenkins">Login to Jenkins</h2>
-<p>After the &quot;BuildResources&quot; environment has been created, click on it and go to Jenkins Dashboard:</p>
-<p><img src="images/jenkins-build-dashboard-click.png" alt=""></p>
+<p>Click on the <strong>BUILD</strong> environment created (the first environment created - &quot;Build resources&quot;) and then go to Jenkins Dashboard</p>
+<p><img src="./images/jenkins-build-dashboard.png" alt=""></p>
 <p><br></p>
 <p>In the new screen, click Login button on the top-right corner:</p>
-<p><img src="images/jenkins-build-dashboard-login.png" alt=""></p>
+<p><img src="./images/jenkins-build-dashboard-login.png" alt=""></p>
 <p><br></p>
 <p>Sign in with user <strong><em>admin</em></strong> and password <strong><em>changeit</em></strong></p>
 <p><img src="images/jenkins-build-login.png" alt=""></p>
@@ -173,23 +172,23 @@
 <p><img src="images/jenkins-build-save-public-key.png" alt=""></p>
 <h2 id="add-user-to-the-portal">Add user to the portal</h2>
 <ul>
-<li>Go to <a href="https://portal.temenos.cloud/">portal.temenos.cloud</a>, respectively <a href="https://tcd-portal.temenos.cloud/">https://tcd-portal.temenos.cloud/</a>.</li>
+<li>Go to portal.temenos.cloud</li>
 <li>Click on <strong>New user</strong></li>
 <li>And fill the required fields</li>
 </ul>
 <div class="NOTE"><h5>Note</h5><p>Copy-paste the entire public key generated before and then delete the last part until equal sign and press <strong>Create user</strong></p>
 </div>
-<p><img src="images/user-details.png" alt=""></p>
+<p><img src="images/jenkins-build-new-portal-user.png" alt=""></p>
 <h2 id="add-a-second-user-to-the-portal">Add a second user to the portal</h2>
 <p>The same as for the first user added, first make sure you generated a <strong>new</strong> SSH key and then:</p>
 <ul>
-<li>Go to <a href="https://portal.temenos.cloud/">portal.temenos.cloud</a>, respectively <a href="https://tcd-portal.temenos.cloud/">https://tcd-portal.temenos.cloud/</a>.</li>
+<li>Go to portal.temenos.cloud</li>
 <li>Click on <strong>New user</strong></li>
 <li>And fill the required fields</li>
 </ul>
-<div class="NOTE"><h5>Note</h5><p>Copy-paste the entire <strong>public</strong> key generated before and then delete the last part until equal sign and press <strong>Create</strong></p>
+<div class="NOTE"><h5>Note</h5><p>Copy-paste the entire <strong>public</strong> key generated before and then delete the last part until equal sign and press <strong>Create user</strong></p>
 </div>
-<p><img src="images/user-new-second.png" alt=""></p>
+<p><img src="images/jenkins-build-second-portal-user.png" alt=""></p>
 <h2 id="add-ssh-key-to-gitlab-repository">Add SSH key to GitLab repository</h2>
 <p>We are using GitLab repository, but you can use a different one. </p>
 <p>In this repository you have to add the ssh keys for the users created in order to connect to Jenkins and build resources.</p>
@@ -233,13 +232,13 @@
 </ol>
 </li>
 </ul>
-<p><img src="images/jenkins-build-user-gitlab-role.png" alt=""></p>
+<p><img src="./images/jenkins-build-user-gitlab-role.png" alt=""></p>
 <h2 id="add-credentials-and-use-id-from-temenos-ds-demo-project">Add credentials and Use ID from &#39;temenos-ds-demo&#39; Project</h2>
 <p>Inside Jenkins console, go to Credentials from left pane and then click global:</p>
-<p><img src="images/jenkins-build-credentials.png" alt=""></p>
+<p><img src="./images/jenkins-build-credentials.png" alt=""></p>
 <p><br></p>
 <p>Then add credentials:</p>
-<p><img src="images/jenkins-build-add-credentials.png" alt=""></p>
+<p><img src="./images/jenkins-build-add-credentials.png" alt=""></p>
 <p><br></p>
 <ul>
 <li>A new screen is open</li>
@@ -265,7 +264,7 @@
 </ul>
 <p><img src="images/jenkins-build-fields2.png" alt=""></p>
 <p>Now if you click on credentials, you will see the following screen with both users details:</p>
-<p><img src="images/jenkins-build-user-id.png" alt=""></p>
+<p><img src="./images/jenkins-build-user-id.png" alt=""></p>
 <div class="NOTE"><h5>Note</h5><p>This uniqe ID of SSH key will be used in the pipeline scripts (Jenkins File) to clone the repositories. </p>
 </div>
 <h2 id="configure-jenkins-pipeline-job-to-use-ssh-keys">Configure Jenkins pipeline job to use SSH keys</h2>
@@ -292,17 +291,17 @@
 <li>It’s time now to go ahead and build our job.</li>
 </ul>
 <p>Go to left pane inside Jenkins console and press &#39;Jenkins&#39; button</p>
-<p><img src="images/jenkins-build-start-job.png" alt=""> </p>
+<p><img src="./images/jenkins-build-start-job.png" alt=""> </p>
 <p>Then click on &#39;Built on&#39;</p>
-<p><img src="images/jenkins-build-built-on.png" alt=""> </p>
+<p><img src="./images/jenkins-build-built-on.png" alt=""> </p>
 <p>New screen is open. The following parameters are <strong>required to change</strong> according to your setup:</p>
 <p>•   SrcRepo </p>
 <p>•   EnvID (see the note below)</p>
 <p>•   emailRecipientsList (optional)</p>
 <p>Click <strong>Build</strong>.</p>
-<p><img src="images/jenkins-build-pipeline-build.png" alt=""> </p>
+<p><img src="./images/jenkins-build-pipeline-build.png" alt=""> </p>
 <div class="NOTE"><h5>Note</h5><p>The environment ID is the one that appears on the URL address after you login and you click on your environment:</p>
-<p><img src="images/jenkins-build-environment-id.png" alt=""> </p>
+<p><img src="./images/jenkins-build-environment-id.png" alt=""> </p>
 </div>
 <p>Build should be successful:</p>
 <p><img src="images/jenkins-build-success.png" alt=""> </p>
