--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
 
-<p><span style="color:#010466;font-weight:1000;font-size:24pt">Welcome to the Temenos Continuous Deployment</span></p>
+<p><span style="color:#010466;font-weight:1000;font-size:24pt">Welcome to Temenos Continuous Deployment</span></p>
 <p><strong>Temenos Continuous Deployment</strong> is a suite of products offered by Temenos Cloud; it is a <em>Platform as a Service (PaaS)</em> that provides individuals and teams with the ability to manage and configure their own instances of Temenos applications and approved 3rd party Plug &amp; Play applications from the Temenos ecosystem. </p>
 <p><br></p>
 <p><img src="images/arrow.png" align="left" width="37" height="37"> &nbsp; <span style="background-color: #dcf0f4;color:#010466;font-weight:1000;font-size:20pt">Benefits</span> </p>
