--- a/home/techguides/stream.html
+++ b/home/techguides/stream.html
@@ -117,7 +117,7 @@ The parts of the stream are listed below:</p>
 </ul>
 <p><strong>Note</strong>: <em>Instead of choosing the enable option, you can create a disabled stream and enable it later, but the default option should be enable.</em></p>
 <p><img src="images/streams-create.png" alt=""></p>
-<p>After the successful creation, your stream will appear on the screen <em>(in case you already have other streams, the newly created will be the last in chronological order)</em> and it will automatically have associated the default stage named &#39;Stable_Dev&#39;.</p>
+<p>After the successful creation, your stream will appear on the screen <em>(in case you already have other streams, the newly created will be the last in chronological order)</em> and it will automatically have associated the default stage named &#39;Stable_Dev&#39; (as in current example). Please <strong>note</strong> that the default stage name is defined in the metadata settings of your organization (On the main menu &gt; General).</p>
 <p><img src="images/streams-created.png" alt=""></p>
 <h2 id="edit-a-stream">Edit a Stream</h2>
 <p>You can edit anytime the name, the description of the stage or choose the disable option by clicking the edit button. </p>
@@ -126,7 +126,8 @@ The parts of the stream are listed below:</p>
 </div>
 <p>Example 1: </p>
 <ul>
-<li>Suppose we have created a stream named Dev2 that has just the default stage (stable_dev) and without adding other stages or configuring further components and products.</li>
+<li>Suppose we have created a stream named Dev2 that has just the default stage (</li>
+<li>) and without adding other stages or configuring further components and products.</li>
 <li>We can just go and delete this stream (even if it has the stable_dev associated to it).</li>
 </ul>
 <p>Example 2:</p>
